# TurboQuery

./: README.md  _check_imports.py  _direct_test.py  _final_test.py  _quick_check.py  _run_pytest.py  _run_test.py  _run_tests.py  _simple_sub.py  _test_e2e.py  _test_output.txt  requirements.txt  test_integration.py  test_loader.py
data/: sample01.csv  sample02.csv  sample03.json
reference/Omni-VRAM-2.5.0/: .env.example  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.cpu  LICENSE  PROJECT_ANALYSIS.md  README.md  _convert_tests.py  app.py  benchmark_comparison.md  docker-compose.yml  pyproject.toml  requirements.txt  run_tests.py  setup.py  test_output.txt  test_run.py  verify_final.txt  vram  vram_hacker.cu
reference/Omni-VRAM-2.5.0/.github/workflows/: test.yml
reference/Omni-VRAM-2.5.0/docs/: api_reference.md  blog_omni_vram.md  examples.md  faq.md  installation.md  quickstart.md
reference/Omni-VRAM-2.5.0/examples/: api_demo.py  benchmark_suite.py  benchmark_v3.py  meeting_transcriber.py  realtime_voice_assistant.py  test_emotion.py  test_whisper_local.py  voice_chat_bot.py
reference/Omni-VRAM-2.5.0/tests/: benchmark_comparison.py  quick_test_realtime.py  test_audio_utils.py  test_config.py  test_emotion_recognition.py  test_integration.py  test_meeting_transcription.py  test_monitoring.py  test_multi_gpu.py  test_noise_reduction.py  test_plugin_manager.py  test_realtime_latency.py  test_speaker_diarization.py  test_speaker_verification.py  test_stream_processor.py  test_tts_engine.py  test_v250.py  test_vram_optimizer.py  test_wake_word.py  test_websocket.py  test_whisper_bridge.py  test_whisper_optimizer.py
reference/Omni-VRAM-2.5.0/vram_core/: __init__.py  api_server.py  audio_enhancer.py  audio_event_detection.py  audio_utils.py  config.py  distributed_transcriber.py  emotion_recognition.py  grpc_server.py  llm_client.py  meeting_analyzer.py  meeting_summarizer.py  monitoring.py  multi_gpu.py  noise_reduction.py  plugin_manager.py  realtime_optimizer.py  speaker_diarization.py  speaker_verification.py  speech_quality.py  stream_processor.py  streaming_asr.py  tts_engine.py  utils.py  voice_translator.py  vram_optimizer.py  wake_word.py  whisper_bridge.py
reference/Omni-VRAM-2.5.0/vram_core/backends/: __init__.py  lite_backend.py  onnx_backend.py  tensorrt_backend.py
reference/Omni-VRAM-2.5.0/vram_core/chinese/: __init__.py  dialect.py  domain_dict.py  normalizer.py  punctuation.py  tokenizer.py
reference/Omni-VRAM-2.5.0/vram_core/whisper/: __init__.py  bridge.py  models.py  optimizer.py  preprocessor.py  result.py
src/: cleaner.py  config.py  formatter.py  indexer.py  loader.py  logger.py  main.py  merger.py  querier.py  tokenizer.py  worker.py
tests/: test_basic.py
