[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omni-vram"
version = "2.5.0"
description = "Production-ready audio AI platform — ASR, TTS, Translation, Speaker Verification, Multi-GPU, VRAM Optimization, LLM Meeting Assistant, Edge Deployment"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Liangchenxu", email = "lcx1479632@gmail.com"},
]
keywords = ["cuda", "vram", "whisper", "voice", "llm", "kv-cache", "zero-copy", "real-time"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
]

dependencies = [
    "numpy>=1.19.0",
    "soundfile>=0.10.0",
    "python-dotenv>=0.19.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
torch = [
    "torch>=1.9.0",
]
whisper-python = [
    "openai-whisper>=20230918",
]
mp3 = [
    "pydub>=0.25.0",
]
audio-io = [
    "pyaudio>=0.2.11",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
onnx = [
    "onnxruntime>=1.15.0",
]
tensorrt = [
    "tensorrt>=8.5.0",
    "pycuda>=2022.1",
]
llm = [
    "requests>=2.28.0",
]
all = [
    "omni-vram[torch,whisper-python,mp3,audio-io,dev,onnx,llm]",
]

[project.urls]
Homepage = "https://github.com/Liangchenxu/Omni-VRAM"
Documentation = "https://github.com/Liangchenxu/Omni-VRAM/tree/main/docs"
Repository = "https://github.com/Liangchenxu/Omni-VRAM"
Issues = "https://github.com/Liangchenxu/Omni-VRAM/issues"
Changelog = "https://github.com/Liangchenxu/Omni-VRAM/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
include = ["vram_core*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]

[tool.isort]
profile = "black"
line_length = 100